--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>hutool-all</artifactId>
 			<version>4.6.8</version>
 		</dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.42.Final</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
